# signalsmith-linear

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.zig  build.zig.zon  cppblas.h  fft.h  fft2.h  linear.h  split-fft.h  stft.h
platform/: fft-accelerate.h  fft-ipp.h  fft2-accelerate.h  fft2-ipp.h  linear-accelerate.h  linear-cblas.h
tests/: CMakeLists.txt  Makefile  main.cpp  stopwatch.h  test-blas.h  test-ffts.h  test-linear.h  test-runner.h  test-stfts.h
tests/plots/out-cmake/: fft2-tests
