cmake_minimum_required(VERSION 3.24)
project(fft2-tests VERSION 1.0.0)
set(CMAKE_CXX_STANDARD 11)
add_executable(fft2-tests ${CMAKE_CURRENT_SOURCE_DIR}/tests/main.cpp)
target_include_directories(fft2-tests PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/modules)
if(WIN32)
	find_package(IPP)
	if(IPP_FOUND)
		target_link_libraries(fft2-tests PRIVATE IPP::ippcore IPP::ipps IPP::ippi)
		target_compile_definitions(fft2-tests PRIVATE SIGNALSMITH_USE_IPP)
	endif()
endif()
