add_library(fft2 INTERFACE)
set_target_properties(fft2 PROPERTIES INTERFACE_INCLUDE_DIRECTORIES ${CMAKE_CURRENT_SOURCE_DIR})

if(WIN32)
	find_package(IPP)
	if(IPP_FOUND)
		message(STATUS "found IPP")
		target_link_libraries(fft2 INTERFACE IPP::ippcore IPP::ipps IPP::ippi)
		target_compile_definitions(fft2 INTERFACE SIGNALSMITH_USE_IPP)
	endif()
elseif(APPLE)
	target_link_libraries(fft2 INTERFACE "-framework Accelerate")
	target_compile_definitions(fft2 INTERFACE SIGNALSMITH_USE_ACCELERATE)
endif()
